src/monaco/XcoreParser.ts
// Generated from c:\data\repos\ecore-editor\XcoreParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { XcoreParserListener } from "./XcoreParserListener";
import { XcoreParserVisitor } from "./XcoreParserVisitor";


export class XcoreParser extends Parser {
	public static readonly WS = 1;
	public static readonly NL = 2;
	public static readonly Package = 3;
	public static readonly Abstract = 4;
	public static readonly Class = 5;
	public static readonly Interface = 6;
	public static readonly Extends = 7;
	public static readonly Comma = 8;
	public static readonly Dot = 9;
	public static readonly CurlyBraceOpen = 10;
	public static readonly CurlyBraceClose = 11;
	public static readonly AngleBraceOpen = 12;
	public static readonly AngleBraceClose = 13;
	public static readonly Unordered = 14;
	public static readonly Unique = 15;
	public static readonly Readonly = 16;
	public static readonly Transient = 17;
	public static readonly Unsettable = 18;
	public static readonly Volatile = 19;
	public static readonly Derived = 20;
	public static readonly Idattr = 21;
	public static readonly Contains = 22;
	public static readonly Opposite = 23;
	public static readonly Operation = 24;
	public static readonly Void = 25;
	public static readonly BraceOpen = 26;
	public static readonly BraceClose = 27;
	public static readonly Throws = 28;
	public static readonly SquareBraceOpen = 29;
	public static readonly SquareBraceClose = 30;
	public static readonly Questionmark = 31;
	public static readonly Star = 32;
	public static readonly Plus = 33;
	public static readonly Minus = 34;
	public static readonly Dotdot = 35;
	public static readonly Ampersand = 36;
	public static readonly Enum = 37;
	public static readonly As = 38;
	public static readonly Equal = 39;
	public static readonly ID = 40;
	public static readonly INT = 41;
	public static readonly STRING = 42;
	public static readonly RULE_xpackage = 0;
	public static readonly RULE_qualifiedname = 1;
	public static readonly RULE_xclassifier = 2;
	public static readonly RULE_xenum = 3;
	public static readonly RULE_xenumliteral = 4;
	public static readonly RULE_signedint = 5;
	public static readonly RULE_xclass = 6;
	public static readonly RULE_xmember = 7;
	public static readonly RULE_xattribute = 8;
	public static readonly RULE_xreference = 9;
	public static readonly RULE_xoperation = 10;
	public static readonly RULE_xparameter = 11;
	public static readonly RULE_xtypeparameter = 12;
	public static readonly RULE_xmultiplicity = 13;
	public static readonly RULE_xrange = 14;
	public static readonly RULE_xgenerictype = 15;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"xpackage", "qualifiedname", "xclassifier", "xenum", "xenumliteral", "signedint", 
		"xclass", "xmember", "xattribute", "xreference", "xoperation", "xparameter", 
		"xtypeparameter", "xmultiplicity", "xrange", "xgenerictype",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'package'", "'abstract'", "'class'", 
		"'interface'", "'extends'", "','", "'.'", "'{'", "'}'", "'<'", "'>'", 
		"'unordered'", "'unique'", "'readonly'", "'transient'", "'unsettable'", 
		"'volatile'", "'derived'", "'id'", "'contains'", "'opposite'", "'op'", 
		"'void'", "'('", "')'", "'throws'", "'['", "']'", "'?'", "'*'", "'+'", 
		"'-'", "'..'", "'&'", "'enum'", "'as'", "'='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WS", "NL", "Package", "Abstract", "Class", "Interface", "Extends", 
		"Comma", "Dot", "CurlyBraceOpen", "CurlyBraceClose", "AngleBraceOpen", 
		"AngleBraceClose", "Unordered", "Unique", "Readonly", "Transient", "Unsettable", 
		"Volatile", "Derived", "Idattr", "Contains", "Opposite", "Operation", 
		"Void", "BraceOpen", "BraceClose", "Throws", "SquareBraceOpen", "SquareBraceClose", 
		"Questionmark", "Star", "Plus", "Minus", "Dotdot", "Ampersand", "Enum", 
		"As", "Equal", "ID", "INT", "STRING",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(XcoreParser._LITERAL_NAMES, XcoreParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return XcoreParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "XcoreParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return XcoreParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return XcoreParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(XcoreParser._ATN, this);
	}
	// @RuleVersion(0)
	public xpackage(): XpackageContext {
		let _localctx: XpackageContext = new XpackageContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, XcoreParser.RULE_xpackage);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 32;
			this.match(XcoreParser.Package);
			this.state = 33;
			this.qualifiedname();
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << XcoreParser.Abstract) | (1 << XcoreParser.Class) | (1 << XcoreParser.Interface))) !== 0) || _la === XcoreParser.Enum) {
				{
				{
				this.state = 34;
				this.xclassifier();
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public qualifiedname(): QualifiednameContext {
		let _localctx: QualifiednameContext = new QualifiednameContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, XcoreParser.RULE_qualifiedname);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 40;
			this.match(XcoreParser.ID);
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === XcoreParser.Dot) {
				{
				{
				this.state = 41;
				this.match(XcoreParser.Dot);
				this.state = 42;
				this.match(XcoreParser.ID);
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xclassifier(): XclassifierContext {
		let _localctx: XclassifierContext = new XclassifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, XcoreParser.RULE_xclassifier);
		try {
			this.state = 50;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case XcoreParser.Abstract:
			case XcoreParser.Class:
			case XcoreParser.Interface:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 48;
				this.xclass();
				}
				break;
			case XcoreParser.Enum:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 49;
				this.xenum();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xenum(): XenumContext {
		let _localctx: XenumContext = new XenumContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, XcoreParser.RULE_xenum);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 52;
			this.match(XcoreParser.Enum);
			this.state = 53;
			this.match(XcoreParser.ID);
			this.state = 54;
			this.match(XcoreParser.CurlyBraceOpen);
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.ID) {
				{
				this.state = 55;
				this.xenumliteral();
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma || _la === XcoreParser.ID) {
					{
					{
					this.state = 57;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === XcoreParser.Comma) {
						{
						this.state = 56;
						this.match(XcoreParser.Comma);
						}
					}

					this.state = 59;
					this.xenumliteral();
					}
					}
					this.state = 64;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 67;
			this.match(XcoreParser.CurlyBraceClose);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xenumliteral(): XenumliteralContext {
		let _localctx: XenumliteralContext = new XenumliteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, XcoreParser.RULE_xenumliteral);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			this.match(XcoreParser.ID);
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.As) {
				{
				this.state = 70;
				this.match(XcoreParser.As);
				this.state = 71;
				this.match(XcoreParser.STRING);
				}
			}

			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Equal) {
				{
				this.state = 74;
				this.match(XcoreParser.Equal);
				this.state = 75;
				this.signedint();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public signedint(): SignedintContext {
		let _localctx: SignedintContext = new SignedintContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, XcoreParser.RULE_signedint);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Minus) {
				{
				this.state = 78;
				this.match(XcoreParser.Minus);
				}
			}

			this.state = 81;
			this.match(XcoreParser.INT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xclass(): XclassContext {
		let _localctx: XclassContext = new XclassContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, XcoreParser.RULE_xclass);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case XcoreParser.Abstract:
			case XcoreParser.Class:
				{
				{
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === XcoreParser.Abstract) {
					{
					this.state = 83;
					this.match(XcoreParser.Abstract);
					}
				}

				this.state = 86;
				this.match(XcoreParser.Class);
				}
				}
				break;
			case XcoreParser.Interface:
				{
				this.state = 87;
				this.match(XcoreParser.Interface);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 90;
			this.match(XcoreParser.ID);
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.AngleBraceOpen) {
				{
				this.state = 91;
				this.match(XcoreParser.AngleBraceOpen);
				this.state = 92;
				this.xtypeparameter();
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma) {
					{
					{
					this.state = 93;
					this.match(XcoreParser.Comma);
					this.state = 94;
					this.xtypeparameter();
					}
					}
					this.state = 99;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 100;
				this.match(XcoreParser.AngleBraceOpen);
				}
			}

			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Extends) {
				{
				this.state = 104;
				this.match(XcoreParser.Extends);
				this.state = 105;
				this.xgenerictype();
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma) {
					{
					{
					this.state = 106;
					this.match(XcoreParser.Comma);
					this.state = 107;
					this.xgenerictype();
					}
					}
					this.state = 112;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 115;
			this.match(XcoreParser.CurlyBraceOpen);
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & ((1 << (XcoreParser.Unordered - 14)) | (1 << (XcoreParser.Unique - 14)) | (1 << (XcoreParser.Readonly - 14)) | (1 << (XcoreParser.Transient - 14)) | (1 << (XcoreParser.Unsettable - 14)) | (1 << (XcoreParser.Volatile - 14)) | (1 << (XcoreParser.Derived - 14)) | (1 << (XcoreParser.Idattr - 14)) | (1 << (XcoreParser.Contains - 14)) | (1 << (XcoreParser.Operation - 14)) | (1 << (XcoreParser.ID - 14)))) !== 0)) {
				{
				{
				this.state = 116;
				this.xmember();
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 122;
			this.match(XcoreParser.CurlyBraceClose);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xmember(): XmemberContext {
		let _localctx: XmemberContext = new XmemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, XcoreParser.RULE_xmember);
		try {
			this.state = 127;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 124;
				this.xoperation();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 125;
				this.xattribute();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 126;
				this.xreference();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xattribute(): XattributeContext {
		let _localctx: XattributeContext = new XattributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, XcoreParser.RULE_xattribute);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unordered) {
				{
				this.state = 129;
				this.match(XcoreParser.Unordered);
				}
			}

			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unique) {
				{
				this.state = 132;
				this.match(XcoreParser.Unique);
				}
			}

			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Readonly) {
				{
				this.state = 135;
				this.match(XcoreParser.Readonly);
				}
			}

			this.state = 139;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Transient) {
				{
				this.state = 138;
				this.match(XcoreParser.Transient);
				}
			}

			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Volatile) {
				{
				this.state = 141;
				this.match(XcoreParser.Volatile);
				}
			}

			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unsettable) {
				{
				this.state = 144;
				this.match(XcoreParser.Unsettable);
				}
			}

			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Derived) {
				{
				this.state = 147;
				this.match(XcoreParser.Derived);
				}
			}

			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Idattr) {
				{
				this.state = 150;
				this.match(XcoreParser.Idattr);
				}
			}

			}
			this.state = 153;
			this.xgenerictype();
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.SquareBraceOpen) {
				{
				this.state = 154;
				this.xmultiplicity();
				}
			}

			this.state = 157;
			this.match(XcoreParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xreference(): XreferenceContext {
		let _localctx: XreferenceContext = new XreferenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, XcoreParser.RULE_xreference);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Contains) {
				{
				this.state = 159;
				this.match(XcoreParser.Contains);
				}
			}

			this.state = 163;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unordered) {
				{
				this.state = 162;
				this.match(XcoreParser.Unordered);
				}
			}

			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unique) {
				{
				this.state = 165;
				this.match(XcoreParser.Unique);
				}
			}

			this.state = 169;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Readonly) {
				{
				this.state = 168;
				this.match(XcoreParser.Readonly);
				}
			}

			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Transient) {
				{
				this.state = 171;
				this.match(XcoreParser.Transient);
				}
			}

			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Volatile) {
				{
				this.state = 174;
				this.match(XcoreParser.Volatile);
				}
			}

			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Unsettable) {
				{
				this.state = 177;
				this.match(XcoreParser.Unsettable);
				}
			}

			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Derived) {
				{
				this.state = 180;
				this.match(XcoreParser.Derived);
				}
			}

			}
			this.state = 183;
			this.xgenerictype();
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.SquareBraceOpen) {
				{
				this.state = 184;
				this.xmultiplicity();
				}
			}

			this.state = 187;
			this.match(XcoreParser.ID);
			this.state = 190;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Opposite) {
				{
				this.state = 188;
				this.match(XcoreParser.Opposite);
				this.state = 189;
				this.match(XcoreParser.ID);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xoperation(): XoperationContext {
		let _localctx: XoperationContext = new XoperationContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, XcoreParser.RULE_xoperation);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.match(XcoreParser.Operation);
			this.state = 201;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case XcoreParser.Unordered:
				{
				this.state = 193;
				this.match(XcoreParser.Unordered);
				this.state = 195;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === XcoreParser.Unique) {
					{
					this.state = 194;
					this.match(XcoreParser.Unique);
					}
				}

				}
				break;
			case XcoreParser.Unique:
				{
				this.state = 197;
				this.match(XcoreParser.Unique);
				this.state = 199;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === XcoreParser.Unordered) {
					{
					this.state = 198;
					this.match(XcoreParser.Unordered);
					}
				}

				}
				break;
			case XcoreParser.AngleBraceOpen:
			case XcoreParser.Void:
			case XcoreParser.ID:
				break;
			default:
				break;
			}
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.AngleBraceOpen) {
				{
				this.state = 203;
				this.match(XcoreParser.AngleBraceOpen);
				this.state = 204;
				this.xtypeparameter();
				this.state = 209;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma) {
					{
					{
					this.state = 205;
					this.match(XcoreParser.Comma);
					this.state = 206;
					this.xtypeparameter();
					}
					}
					this.state = 211;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 212;
				this.match(XcoreParser.AngleBraceClose);
				}
			}

			this.state = 218;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case XcoreParser.ID:
				{
				this.state = 216;
				this.xgenerictype();
				}
				break;
			case XcoreParser.Void:
				{
				this.state = 217;
				this.match(XcoreParser.Void);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 221;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.SquareBraceOpen) {
				{
				this.state = 220;
				this.xmultiplicity();
				}
			}

			this.state = 223;
			this.match(XcoreParser.ID);
			this.state = 224;
			this.match(XcoreParser.BraceOpen);
			this.state = 233;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & ((1 << (XcoreParser.Unordered - 14)) | (1 << (XcoreParser.Unique - 14)) | (1 << (XcoreParser.ID - 14)))) !== 0)) {
				{
				this.state = 225;
				this.xparameter();
				this.state = 230;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma) {
					{
					{
					this.state = 226;
					this.match(XcoreParser.Comma);
					this.state = 227;
					this.xparameter();
					}
					}
					this.state = 232;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 235;
			this.match(XcoreParser.BraceClose);
			this.state = 245;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Throws) {
				{
				this.state = 236;
				this.match(XcoreParser.Throws);
				this.state = 237;
				this.xgenerictype();
				this.state = 242;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Comma) {
					{
					{
					this.state = 238;
					this.match(XcoreParser.Comma);
					this.state = 239;
					this.xgenerictype();
					}
					}
					this.state = 244;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xparameter(): XparameterContext {
		let _localctx: XparameterContext = new XparameterContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, XcoreParser.RULE_xparameter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 255;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case XcoreParser.Unordered:
				{
				this.state = 247;
				this.match(XcoreParser.Unordered);
				this.state = 249;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === XcoreParser.Unique) {
					{
					this.state = 248;
					this.match(XcoreParser.Unique);
					}
				}

				}
				break;
			case XcoreParser.Unique:
				{
				this.state = 251;
				this.match(XcoreParser.Unique);
				this.state = 253;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === XcoreParser.Unordered) {
					{
					this.state = 252;
					this.match(XcoreParser.Unordered);
					}
				}

				}
				break;
			case XcoreParser.ID:
				break;
			default:
				break;
			}
			this.state = 257;
			this.xgenerictype();
			this.state = 259;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.SquareBraceOpen) {
				{
				this.state = 258;
				this.xmultiplicity();
				}
			}

			this.state = 261;
			this.match(XcoreParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xtypeparameter(): XtypeparameterContext {
		let _localctx: XtypeparameterContext = new XtypeparameterContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, XcoreParser.RULE_xtypeparameter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 263;
			this.match(XcoreParser.ID);
			this.state = 273;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === XcoreParser.Extends) {
				{
				this.state = 264;
				this.match(XcoreParser.Extends);
				this.state = 265;
				this.xgenerictype();
				this.state = 270;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === XcoreParser.Ampersand) {
					{
					{
					this.state = 266;
					this.match(XcoreParser.Ampersand);
					this.state = 267;
					this.xgenerictype();
					}
					}
					this.state = 272;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}
